# OCProjet_AlgoInvest

./: .gitignore  commandes.md  explo.txt  pyproject.toml
algoinvest/: branch_and_bound.py  bruteforce.py  knapsack_H_S.py  optimized.py  test_algo.py  tree_schema.py  unitest.py
algoinvest/dataset/: control_dataset1.csv  control_dataset2.csv  dataset_0.csv  dataset_0_bis.csv
