[tool.poetry]
name = "algoinvest"
version = "0.1.0"
description = ""
authors = ["johnchem <j.payssan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
memory-profiler = "^0.60.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --durations=0"
testpaths = [
    "test_algo",
]
